# CuBATS

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  README.html  README.md  colocalization.html  examples.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  quantification.html  registration.html  search.html  searchindex.js  segmentation.html  slide_collection.html
.doctrees/: README.doctree  colocalization.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  quantification.doctree  registration.doctree  segmentation.doctree  slide_collection.doctree
.github/workflows/: deploy_docs.yaml  test.yaml  test_development.yaml  test_full.yaml
_modules/: index.html
_sources/: quantification.rst.txt  slide_collection.rst.txt
docs/source/: README.rst  colocalization.rst  conf.py  examples.rst  index.rst  installation.rst  registration.rst  segmentation.rst  slide_collection.rst
docu/: cubats.rst
docu/source/: README.rst  conf.py  examples.rst  index.rst  installation.rst  modules.rst  segmentation.rst  slide_collection.rst
examples/: base_example.ipynb  script.py  script1.py
src/cubats/: Main.ipynb  Registration_with_reference.ipynb  Utils.py  config.py  cutils.py  logging_config.py  registration.py  (+6 more)
tests/: colocalization_test.py  compute_dual_antigen_combinations_test.py  compute_triplet_antigen_combinations_test.py  conftest.py  dummy_test.py  registration_test.py  segmentation_test.py  slide_collection_test.py  slide_test.py  tile_processing_test.py  utils_test.py
(+16 files in other folders)
